--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,11 +9,10 @@ authors = ["Panos Asproulis <p.asproulis@icloud.com>"]
 rust-version = "1.85"
 
 [dependencies]
-rayon = "1.5.1"
+num-traits = "0.2"
 
 [dev-dependencies]
-approx = "0.5.1"
-rand = "0.9.0"
+assert_approx_eq = "1.1.0"
 
 [lib]
 name = "numerics"
